# ide99-bench

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
reports/: REPORT.md
results/: boot_and_idle.json  criterion_summary.json  grid_scroll.json  read_first_page.json
scripts/: boot_and_idle.py  grid_scroll.mjs  run-all.sh  seed.sql
scripts/read_first_page/: Cargo.toml
scripts/read_first_page/src/: main.rs
